force-app/main/default/objects/Simulation_Week__c/Simulation_Week__c.object-meta.xml
<CustomObject>
    <label>Simulation Week</label>
    <nameField>
        <displayFormat>SW-{000000}</displayFormat>
        <label>Simulation Week Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulation Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>