force-app/main/default/objects/Simulation_Week__c/fields/Feature_Completed_Before_Week__c.field-meta.xml
<CustomField>
    <fullName>Feature_Completed_Before_Week__c</fullName>
    <formula>IF( ISBLANK(Feature_Forecast__r.Actual_Completion_Date__c), false,  Feature_Forecast__r.Actual_Completion_Date__c &lt;=  Week__c )</formula>
    <inlineHelpText>Determines whether the actual completion date of the feature was on or before this week</inlineHelpText>
    <label>Feature Completed Before Week</label>
    <type>Checkbox</type>
</CustomField>