force-app/main/default/objects/Simulation_Week__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <inlineHelpText>Number of sprints since start date</inlineHelpText>
    <label>Sprint Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>